percent-routing/front/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: front
    app.kubernetes.io/component: front
    app.kubernetes.io/instance: front
    app.kubernetes.io/name: front
    app.kubernetes.io/part-of: front
  name: front
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: front
    weight: 100
  wildcardPolicy: None
